# bplist

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE-MIT
src/: document.rs  error.rs  lib.rs  object.rs
src/de/: date.rs  mod.rs  uid.rs
src/de/parser/: document.rs  mod.rs  object.rs  utils.rs
src/object/: de.rs  mod.rs
tests/: cycle.plist  cycle.rs  integer_list.plist  integer_list.rs  point.plist  point.rs
